# UiLib

./: CMakeLists.txt  Doxyfile  README.md  qmldir
.github/workflows/: static.yml
docs/: examples.md
doxygen-custom/: header.html
public/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  class_ui_lib_1_1_colors-members.html  class_ui_lib_1_1_colors.html  class_ui_lib_1_1_colors.js  class_ui_lib_1_1_colors__inherit__graph.dot  class_ui_lib_1_1_common-members.html  class_ui_lib_1_1_common.html  class_ui_lib_1_1_common.js  class_ui_lib_1_1_common__inherit__graph.dot  class_ui_lib_1_1_control-members.html  class_ui_lib_1_1_control.html  class_ui_lib_1_1_control__inherit__graph.dot  class_ui_lib_1_1_icon-members.html  class_ui_lib_1_1_icon.html  class_ui_lib_1_1_icon.js  class_ui_lib_1_1_icon__inherit__graph.dot  class_ui_lib_1_1_icons-members.html  class_ui_lib_1_1_icons.html  class_ui_lib_1_1_icons.js  class_ui_lib_1_1_icons__inherit__graph.dot  class_ui_lib_1_1_settings-members.html  class_ui_lib_1_1_settings.html  class_ui_lib_1_1_settings.js  class_ui_lib_1_1_settings__inherit__graph.dot  class_ui_lib_1_1_toggle_switch-members.html  class_ui_lib_1_1_toggle_switch.html  class_ui_lib_1_1_toggle_switch.js  class_ui_lib_1_1_toggle_switch__inherit__graph.dot  class_ui_lib_1_1_utils-members.html  class_ui_lib_1_1_utils.html  class_ui_lib_1_1_utils.js  class_ui_lib_1_1_utils__inherit__graph.dot  classes.html  colors_8cpp.html  colors_8cpp__incl.dot  colors_8h.html  colors_8h.js  colors_8h__dep__incl.dot  (+80 more)
public/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_4.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+31 more)
src/qml/controls/: ToggleSwitch.qml
src/qml/labels/: Icon.qml
src/singletones/: colors.cpp  colors.h  icons.cpp  icons.h  settings.cpp  settings.h  utils.cpp  utils.h
src/templates/: control.cpp  control.h
src/templates/controls/: toggleswitch.cpp  toggleswitch.h
src/templates/labels/: icon.cpp  icon.h
